css on scrollbar, cards and boards fixed

--- a/main.css
+++ b/main.css
@@ -2,9 +2,53 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Noto Sans,Ubuntu,Droid Sans,Helvetica Neue,sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Noto Sans,
+    Ubuntu, Droid Sans, Helvetica Neue, sans-serif;
+}
+* {
+  scrollbar-width: thin;
+  scrollbar-color: blue orange;
 }
 
+/* Works on Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: 0.8rem;
+  height: 1rem;
+}
+
+*::-webkit-scrollbar-track {
+  background: rgba(255, 255, 255, 0.2);
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: rgba(128, 128, 128, 0.7);
+  border-radius: 20px;
+}
+:root {
+  font-size: 10px;
+  --radius: 0.3rem;
+  --btn-cl: rgba(255, 255, 255, 0.2);
+  --btn-hover-cl: rgba(255, 255, 255, 0.32);
+  --light-gray: #ebecf0;
+  --default-txt: 1.4rem;
+}
+.button-wrapper {
+  border-radius: var(--radius);
+  border: none;
+  padding: 0 1.2rem;
+  height: 3.2rem;
+  width: fit-content;
+  cursor: pointer;
+  background-color: var(--btn-cl);
+}
+.button-wrapper:hover {
+  background-color: var(--btn-hover-cl);
+}
+.button-text {
+  font-size: var(--default-txt);
+  line-height: 3.2rem;
+  color: #fff;
+}
 body {
   background-color: #f4f5f7;
 }
@@ -22,40 +66,31 @@ main {
   overflow-y: auto;
 }
 
-.button-wrapper {
-  border-radius: 3px;
-  border: none;
-  padding: 0 12px;
-  height: 32px;
-  width: fit-content;
-  cursor: pointer;
-  background-color: hsla(0,0%,100%,.2);
-}
-.button-wrapper:hover{
-    background-color: hsla(0,0%,100%,.32) 
-}
-.button-text {
-  font-size: 14px;
-  line-height: 32px;
-  color: white;
-}
 .board-header {
-  height: 10%;
-  display:flex;
+  height: 5vh;
+  display: flex;
 }
 .boards-list {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 20px;
-  padding: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 2rem;
+  padding: 2rem;
   background-color: #f4f5f7;
 }
 
 .board-tile {
-  padding: 50px;
-  color: white;
+  width: 19rem;
+  height: 9.6rem;
   background-size: cover;
   cursor: pointer;
+  color: #fff;
+  padding: 0.8rem;
+  font-size: 1.6rem;
+  font-weight: 700;
+  overflow-y: auto;
+  word-break: break-word;
+  border-radius: var(--radius);
 }
 .main-wrapper {
   background-size: cover;
@@ -65,32 +100,42 @@ main {
   grid-auto-flow: column;
   overflow-x: auto;
   height: 90vh;
-  padding: 20px;
-  gap: 20px;
+  margin: 0 2rem;
+  gap: 1rem;
 }
 .list-wrapper {
-  width: 300px;
-  height: 100%;
-  background-color: white;
+  width: 27rem;
+  height: fit-content;
+  max-height: 100%;
+  background-color: var(--light-gray);
   border-radius: 5px;
+  padding: 0 1rem 1rem;
 }
 .list-name {
-  padding: 20px;
-  background-color: lightgray;
+  font-size: var(--default-txt);
+  font-weight: 600;
+  display: flex;
+  align-items: center;
+  margin: 0 0.5rem;
+  /* padding: 20px; */
+  /* background-color: lightgray; */
   height: 5vh;
 }
 .list-content {
   overflow-y: auto;
-  height: calc(85vh - 40px);
+  max-height: 80vh;
   display: grid;
   gap: 10px;
   align-content: flex-start;
 }
 
 .card-wrapper {
-  padding: 20px;
-  border: 1px solid black;
-  margin: 0 10px;
+  background-color: #fff;
+  color: #172b4d;
+  padding: 1rem;
+  font-size: var(--default-txt);
+  box-shadow: 0 1px 0 rgb(9 30 66 / 25%);
+  border-radius: var(--radius);
   cursor: pointer;
 }
 .card-name {
@@ -109,11 +154,12 @@ main {
 }
 
 .modal {
-  width: 70%;
+  width: 50%;
   height: 70%;
-  background-color: white;
+  background-color: #f4f5f7;
   position: relative;
-  padding: 40px;
+  padding: 2rem;
+  border-radius: var(--radius);
 }
 .modal-wrapper.is-open {
   display: flex;
@@ -122,29 +168,87 @@ main {
 }
 .modal-close {
   position: absolute;
-  right: 10px;
-  top: 10px;
+  right: 2rem;
+  top: 2rem;
   cursor: pointer;
 }
-
-.input-wrapper {
+.card-details-wrapper{
+  padding: 0 0 0 3rem;
+}
+.card-details-header {
+  padding: 0 2rem 0 0;
 
 }
-
+.card-details-title .input-text {
+  font-size: 2rem;
+  font-weight: 600;
+  color: #172b4d;
+}
+.card-details-list-title {
+  color: #5e6c84;
+  font-size: var(--default-txt);
+}
+.card-details-meta {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 2rem;
+  margin: 3rem 1rem 1rem ;
+}
+.card-details-members-avatar {
+  height: 3.2rem;
+  width: 3.2rem;
+  border-radius: 50%;
+  object-fit: cover;
+  display: flex;
+  justify-content: center;
+  color: #5e6c84;
+  background-color: rgba(9, 30, 66, 0.04);
+  font-size: 2rem;
+  cursor: pointer;
+}
+.card-details-labels {
+  display: flex;
+  flex-wrap: wrap;
+}
+.card-details-labels .card-label-wrapper {
+  height: 3.2rem;
+  border-radius: var(--radius);
+  display: flex;
+  align-items: center;
+  padding: 0 1rem;
+  margin: 0 0.5rem 0.5rem 0;
+}
+.card-label-text {
+  color: #fff;
+  font-weight: 600;
+  font-size: var(--default-txt);
+}
+.card-details-members-title,
+.card-details-labels-title {
+  color: #5e6c84;
+  font-size: 1.2rem;
+  margin-bottom: 1rem;
+  display: block;
+}
+.card-details-members {
+  display: grid;
+  grid-auto-flow: column;
+  gap: 1rem;
+}
 .input-text {
   background: transparent;
-  border-radius: 3px;
+  border-radius: var(--radius);
   box-shadow: none;
-  font-size: 20px;
-  font-weight: 600;
-  line-height: 24px;
-  margin: -4px -8px;
-  padding: 4px 8px;
+  line-height: 2.4rem;
   resize: none;
   width: 100%;
   border: unset;
+  overflow: hidden;
 }
-
+.card-details-description-title,.card-details-activity-title{
+  font-size: 1.6rem;
+  font-weight: 600;
+}
 .input-text:focus {
   background-color: #fff;
   box-shadow: inset 0 0 0 2px #0079bf;
@@ -153,7 +257,6 @@ main {
 }
 
 .input-text-multiline {
-  
 }
 
 .floating-list-wrapper {
